Fix cache logging expectations in Lab 3
Issue: Users not seeing 'Prefix cache hit' messages in logs

Root Cause:
- vLLM only logs detailed cache activity at DEBUG level
- At INFO level, only NATS connectivity and endpoint registration visible
- Lab promised cache hit/miss logs that aren't available by default

Changes:
1. Step 2: Updated to set realistic expectations
   - Explain DEBUG level needed for detailed cache logs
   - Show how to check NATS events instead (recommended)
   - Provide optional command to enable verbose logging
   - Document what actually indicates KV-aware routing works

2. Step 4: Changed from 'Check Worker Logs for Cache Activity'
          to 'Verify KV-Aware Routing is Working'
   - Check NATS connection status (visible at INFO)
   - Check router mode configuration (visible at INFO)
   - Focus on performance indicators (TTFT improvement)
   - Remove promises of cache hit/miss logs

What users will see:
✓ NATS connection messages
✓ Endpoint registration
✓ Router mode: kv
✓ Faster subsequent requests (performance)
✗ Detailed cache hit/miss (requires DEBUG)

--- a/03-kv-aware-routing.ipynb
+++ b/03-kv-aware-routing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6081f5c3",
+   "id": "078f660f",
    "metadata": {},
    "source": [
     "# Lab 3: KV-Aware Routing with Data-Parallel Workers\n",
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8057277",
+   "id": "28d35e2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bc60abf",
+   "id": "5efb2a0d",
    "metadata": {},
    "source": [
     "### Step 2: Install NATS with JetStream\n",
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "183d3cf1",
+   "id": "b66408a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2691f47",
+   "id": "745606eb",
    "metadata": {},
    "source": [
     "### Step 3: Verify NATS Deployment"
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd7e6c4f",
+   "id": "a849f8bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0035cb8",
+   "id": "1cce0c35",
    "metadata": {},
    "source": [
     "### Step 4: Test NATS Connectivity (Optional)"
@@ -240,22 +240,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a22a3a6",
+   "id": "0abf1b30",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "# Quick connectivity test (publishes a test message)\n",
-    "kubectl run --rm nats-test --image=natsio/nats-box:latest --restart=Never -- \\\n",
-    "  nats pub -s nats://nats.nats-system:4222 test \"Hello from NATS test\"\n",
+    "# Quick connectivity test using the NATS pod\n",
+    "echo \"Testing NATS connectivity...\"\n",
+    "kubectl exec -n nats-system nats-0 -- \\\n",
+    "  nats pub test \"Hello from NATS test\"\n",
     "\n",
-    "# If successful, you'll see \"Published [test] : 'Hello from NATS test'\"\n",
-    "echo \"✓ NATS is reachable and accepting connections\""
+    "if [ $? -eq 0 ]; then\n",
+    "    echo \"\"\n",
+    "    echo \"✓ NATS is reachable and accepting connections\"\n",
+    "else\n",
+    "    echo \"\"\n",
+    "    echo \"⚠️ NATS connectivity test failed\"\n",
+    "fi"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "79309978",
+   "id": "2235a61b",
    "metadata": {},
    "source": [
     "---\n",
@@ -268,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81940030",
+   "id": "859fabe4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "620a803b",
+   "id": "60f2585d",
    "metadata": {},
    "source": [
     "---\n",
@@ -305,7 +311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6ecfd6b",
+   "id": "6f340f59",
    "metadata": {},
    "source": [
     "### Step 1: Check Current GPU Usage"
@@ -314,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1927ae93",
+   "id": "28ace6db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc37eccd",
+   "id": "3c45fb42",
    "metadata": {},
    "source": [
     "### Step 2: Delete Lab 1 Deployment (If Still Running)\n",
@@ -353,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88878f54",
+   "id": "ae2b5973",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23689919",
+   "id": "cc6a64ae",
    "metadata": {},
    "source": [
     "### Step 3: Verify GPUs Are Available\n",
@@ -394,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48c2fe57",
+   "id": "1d89dd73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96a26f6b",
+   "id": "3293898d",
    "metadata": {},
    "source": [
     "---\n",
@@ -424,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "683fcc84",
+   "id": "b6a4293f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +516,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9eb2023",
+   "id": "e04d922e",
    "metadata": {},
    "source": [
     "**Key Configuration Flags:**\n",
@@ -531,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9da36d3",
+   "id": "b66a9df7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +572,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "399f7938",
+   "id": "1944f91c",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -575,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e13ac329",
+   "id": "76441bca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +611,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ad5a1dc",
+   "id": "bfaa1ec0",
    "metadata": {},
    "source": [
     "### Step 4: Test Basic Inference"
@@ -614,7 +620,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67680f56",
+   "id": "3cd6cce4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +645,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e396ff83",
+   "id": "7c45b51f",
    "metadata": {},
    "source": [
     "---\n",
@@ -654,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ab3995e",
+   "id": "5ce01452",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,46 +715,77 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b687ea95",
+   "id": "af946643",
    "metadata": {},
    "source": [
     "**Expected Behavior:**\n",
     "- Request 1: Slower TTFT (Time To First Token) - no cached blocks\n",
     "- Requests 2 & 3: Faster TTFT - router directs to worker with cached prefix \"Explain quantum computing\"\n",
     "\n",
-    "### Step 2: Check Worker Logs for Cache Activity"
+    "### Step 2: Check Cache Behavior\n",
+    "\n",
+    "**Note**: vLLM's detailed cache logs (hit/miss rates) are only visible at DEBUG level, which is very verbose. At INFO level, you'll see NATS connection and endpoint registration, but not individual cache hits.\n",
+    "\n",
+    "**Option A: Check NATS Events (Recommended)**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ab3e0e2",
+   "id": "ae462f76",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "export NAMESPACE=${NAMESPACE:-dynamo}\n",
     "\n",
-    "# Get worker pod names  \n",
-    "WORKER_PODS=$(kubectl get pods -n $NAMESPACE -l nvidia.com/dynamo-component=VllmWorker,nvidia.com/dynamo-graph-deployment-name=vllm-kv-demo -o jsonpath='{.items[*].metadata.name}')\n",
+    "# Check NATS for KV cache events being published\n",
+    "echo \"Checking NATS for KV cache event stream...\"\n",
+    "kubectl exec -n nats-system nats-0 -- nats stream ls 2>/dev/null || \\\n",
+    "    echo \"Note: JetStream streams are created on first request\"\n",
     "\n",
-    "echo \"Checking worker logs for cache events...\"\n",
-    "for POD in $WORKER_PODS; do\n",
-    "    echo \"\"\n",
-    "    echo \"=== Worker: $POD ===\"\n",
-    "    kubectl logs -n $NAMESPACE $POD --tail=30 | grep -E \"(prefix.*cache|kv.*cache|blocks)\" || echo \"No cache messages in recent logs\"\n",
-    "done"
+    "echo \"\"\n",
+    "echo \"After sending requests above, workers publish KV events to NATS\"\n",
+    "echo \"The router uses these events to route requests to workers with cached prefixes\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7a42f8f0",
+   "id": "06f003a9",
    "metadata": {},
    "source": [
-    "**What to look for:**\n",
-    "- \"Prefix cache hit\" messages\n",
-    "- Block allocation/reuse statistics\n",
-    "- Most requests should hit the same worker (indicated by same pod having activity)\n",
+    "**Option B: Enable Verbose Logging (Optional - Very Verbose)**\n",
+    "\n",
+    "If you want to see detailed cache hit/miss logs, you can patch the deployment:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "516458d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "# This will make logs VERY verbose - only use for debugging\n",
+    "kubectl set env deployment/vllm-kv-demo-vllmworker \\\n",
+    "  -n $NAMESPACE \\\n",
+    "  VLLM_LOGGING_LEVEL=DEBUG\n",
+    "\n",
+    "echo \"⚠️ Verbose logging enabled - logs will be very detailed\"\n",
+    "echo \"To revert: kubectl set env deployment/vllm-kv-demo-vllmworker -n $NAMESPACE VLLM_LOGGING_LEVEL=INFO\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f21c46ad",
+   "metadata": {},
+   "source": [
+    "**What indicates KV-aware routing is working:**\n",
+    "- NATS connection successful (shown in startup logs)\n",
+    "- Requests with similar prefixes complete faster (TTFT improvement)\n",
+    "- Worker logs show `Registering endpoint` messages (NATS connectivity)\n",
+    "- At DEBUG level: \"GPU KV cache usage\" and block allocation messages\n",
     "\n",
     "### Step 3: Conversation-Style Traffic (System Prompt Reuse)"
    ]
@@ -756,7 +793,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "768c659f",
+   "id": "5c1eff55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,54 +840,62 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf5a2b55",
+   "id": "34b14a9b",
    "metadata": {},
    "source": [
-    "### Step 4: Check Worker Logs for Cache Activity"
+    "### Step 4: Verify KV-Aware Routing is Working"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "354c3140",
+   "id": "8891ef08",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "# Get cache stats from worker logs\n",
     "export NAMESPACE=${NAMESPACE:-dynamo}\n",
     "\n",
+    "echo \"=== Verifying KV-Aware Routing Setup ===\"\n",
+    "echo \"\"\n",
+    "\n",
+    "# Check NATS connectivity from workers\n",
+    "echo \"1. NATS Connection Status:\"\n",
     "WORKER_POD=$(kubectl get pods -n $NAMESPACE -l nvidia.com/dynamo-component=VllmWorker,nvidia.com/dynamo-graph-deployment-name=vllm-kv-demo -o jsonpath='{.items[0].metadata.name}' 2>/dev/null)\n",
     "\n",
     "if [ -n \"$WORKER_POD\" ]; then\n",
-    "    echo \"Checking cache activity in worker logs...\"\n",
+    "    kubectl logs -n $NAMESPACE $WORKER_POD --tail=50 | grep -E \"(NATS|nats)\" | tail -3\n",
     "    echo \"\"\n",
-    "    kubectl logs -n $NAMESPACE $WORKER_POD --tail=100 | grep -i \"cache\\|prefix\" | tail -10\n",
-    "    \n",
-    "    echo \"\"\n",
-    "    echo \"Worker pod: $WORKER_POD\"\n",
-    "    echo \"\"\n",
-    "    echo \"What to look for:\"\n",
-    "    echo \"  - Prefix cache hits/misses\"\n",
-    "    echo \"  - KV cache block creation events\"\n",
-    "    echo \"  - Cache eviction messages\"\n",
-    "    echo \"  - NATS connection status\"\n",
     "else\n",
     "    echo \"⚠️ No worker pods found\"\n",
-    "    echo \"Make sure the vllm-kv-demo deployment is running\"\n",
-    "fi"
+    "fi\n",
+    "\n",
+    "echo \"2. KV-Aware Router Configuration:\"\n",
+    "FRONTEND_POD=$(kubectl get pods -n $NAMESPACE -l nvidia.com/dynamo-component=Frontend,nvidia.com/dynamo-graph-deployment-name=vllm-kv-demo -o jsonpath='{.items[0].metadata.name}' 2>/dev/null)\n",
+    "\n",
+    "if [ -n \"$FRONTEND_POD\" ]; then\n",
+    "    kubectl logs -n $NAMESPACE $FRONTEND_POD --tail=50 | grep -E \"(router.*mode|kv.*overlap)\" | tail -3\n",
+    "    echo \"\"\n",
+    "else\n",
+    "    echo \"⚠️ No frontend pod found\"\n",
+    "fi\n",
+    "\n",
+    "echo \"3. Performance Indicator:\"\n",
+    "echo \"   Run the same prompt 2-3 times and compare TTFT (Time To First Token)\"\n",
+    "echo \"   Second+ requests should be noticeably faster with cache hits\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "82c15ddc",
+   "id": "54b99b0a",
    "metadata": {},
    "source": [
-    "**What to observe:**\n",
-    "- Prefix cache hit/miss rates in worker logs\n",
-    "- NATS connection status (should be connected)\n",
-    "- Cache block allocation and reuse patterns\n",
-    "- Router routing requests to the same worker for similar prefixes\n",
+    "**How to confirm KV-aware routing is working:**\n",
+    "\n",
+    "1. **NATS connected**: Worker logs show successful NATS connection and endpoint registration\n",
+    "2. **Router in KV mode**: Frontend logs show `router_mode: kv` and KV overlap scoring\n",
+    "3. **Faster subsequent requests**: Requests with shared prefixes complete faster (visible via `time curl` or benchmark tools)\n",
+    "4. **Same worker handling similar requests**: Using verbose logging (DEBUG level), you can see the same worker pod handling requests with shared prefixes\n",
     "\n",
     "---\n",
     "\n",
@@ -881,7 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c76356aa",
+   "id": "125ef6c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -904,7 +949,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4026bba0",
+   "id": "f1815f22",
    "metadata": {},
    "source": [
     "### Workers Not Discovered"
@@ -913,7 +958,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a6f467f",
+   "id": "34b2e66a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -937,7 +982,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75710f8e",
+   "id": "b8bf3726",
    "metadata": {},
    "source": [
     "### No Requests Reaching Workers"
@@ -946,7 +991,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e3f3087",
+   "id": "123ee42b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -970,7 +1015,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ce8a115",
+   "id": "85cfc534",
    "metadata": {},
    "source": [
     "### Understanding Cache Sharing with NIXL\n",
@@ -1004,7 +1049,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdb8dc5b",
+   "id": "9c2e6c26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1021,7 +1066,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd2b9942",
+   "id": "1e2c4cd2",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Still Running\n",
@@ -1032,7 +1077,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05fed647",
+   "id": "cf59a9a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1057,7 +1102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff787e6d",
+   "id": "6ac86ce1",
    "metadata": {},
    "source": [
     "---\n",
@@ -1074,7 +1119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d44ca7e9",
+   "id": "2787683d",
    "metadata": {},
    "source": [
     "### Community Resources\n",
