Fix NATS connectivity test: use nats-box Job instead of exec
Error: 'nats' executable not found in NATS server container

Root Cause:
- The nats-0 StatefulSet pod runs the NATS server
- NATS server container doesn't include CLI tools (nats pub/sub)
- CLI tools are only in natsio/nats-box image

Solution:
- Use Kubernetes Job with nats-box image instead of kubectl exec
- Job runs nats pub command and completes
- Auto-cleanup after 30 seconds (ttlSecondsAfterFinished: 30)
- No interactive flags, works in notebook cells

Changes:
- Replaced kubectl exec with Job manifest
- Added kubectl wait to check completion
- Show logs on failure for debugging
- Non-interactive, notebook-friendly

Result:
✓ Test runs in separate nats-box container
✓ Completes and auto-cleans up
✓ Works in Jupyter notebook cells

--- a/03-kv-aware-routing.ipynb
+++ b/03-kv-aware-routing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "078f660f",
+   "id": "64cd9184",
    "metadata": {},
    "source": [
     "# Lab 3: KV-Aware Routing with Data-Parallel Workers\n",
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28d35e2c",
+   "id": "f4eba0a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5efb2a0d",
+   "id": "ef093de8",
    "metadata": {},
    "source": [
     "### Step 2: Install NATS with JetStream\n",
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b66408a8",
+   "id": "049f4712",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "745606eb",
+   "id": "b31fd827",
    "metadata": {},
    "source": [
     "### Step 3: Verify NATS Deployment"
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a849f8bc",
+   "id": "d35bf4c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cce0c35",
+   "id": "ac81ef4e",
    "metadata": {},
    "source": [
     "### Step 4: Test NATS Connectivity (Optional)"
@@ -240,28 +240,59 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0abf1b30",
+   "id": "37c82465",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "# Quick connectivity test using the NATS pod\n",
+    "# Quick connectivity test using nats-box\n",
     "echo \"Testing NATS connectivity...\"\n",
-    "kubectl exec -n nats-system nats-0 -- \\\n",
-    "  nats pub test \"Hello from NATS test\"\n",
+    "\n",
+    "# Create a test Job\n",
+    "kubectl apply -f - <<EOF\n",
+    "apiVersion: batch/v1\n",
+    "kind: Job\n",
+    "metadata:\n",
+    "  name: nats-test\n",
+    "  namespace: nats-system\n",
+    "spec:\n",
+    "  ttlSecondsAfterFinished: 30\n",
+    "  template:\n",
+    "    spec:\n",
+    "      containers:\n",
+    "      - name: nats-box\n",
+    "        image: natsio/nats-box:latest\n",
+    "        command:\n",
+    "        - nats\n",
+    "        - pub\n",
+    "        - -s\n",
+    "        - nats://nats.nats-system:4222\n",
+    "        - test\n",
+    "        - \"Hello from NATS test\"\n",
+    "      restartPolicy: Never\n",
+    "  backoffLimit: 2\n",
+    "EOF\n",
+    "\n",
+    "# Wait for job to complete\n",
+    "echo \"Waiting for test to complete...\"\n",
+    "kubectl wait --for=condition=complete --timeout=30s job/nats-test -n nats-system 2>/dev/null\n",
     "\n",
     "if [ $? -eq 0 ]; then\n",
     "    echo \"\"\n",
-    "    echo \"✓ NATS is reachable and accepting connections\"\n",
+    "    echo \"✓ NATS connectivity test successful\"\n",
+    "    echo \"  Published test message to NATS server\"\n",
     "else\n",
     "    echo \"\"\n",
-    "    echo \"⚠️ NATS connectivity test failed\"\n",
-    "fi"
+    "    echo \"⚠️ NATS connectivity test failed or timed out\"\n",
+    "    kubectl logs -n nats-system job/nats-test 2>/dev/null\n",
+    "fi\n",
+    "\n",
+    "# Cleanup will happen automatically after 30 seconds (ttlSecondsAfterFinished)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2235a61b",
+   "id": "956171ec",
    "metadata": {},
    "source": [
     "---\n",
@@ -274,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "859fabe4",
+   "id": "6fff08a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60f2585d",
+   "id": "7e55e5db",
    "metadata": {},
    "source": [
     "---\n",
@@ -311,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f340f59",
+   "id": "7e44b5ff",
    "metadata": {},
    "source": [
     "### Step 1: Check Current GPU Usage"
@@ -320,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28ace6db",
+   "id": "71001b27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c45fb42",
+   "id": "630026e4",
    "metadata": {},
    "source": [
     "### Step 2: Delete Lab 1 Deployment (If Still Running)\n",
@@ -359,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae2b5973",
+   "id": "bf0e9672",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc6a64ae",
+   "id": "814cf0df",
    "metadata": {},
    "source": [
     "### Step 3: Verify GPUs Are Available\n",
@@ -400,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d89dd73",
+   "id": "551b6a7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3293898d",
+   "id": "7d347caf",
    "metadata": {},
    "source": [
     "---\n",
@@ -430,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6a4293f",
+   "id": "7bdc12ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e04d922e",
+   "id": "677c9e04",
    "metadata": {},
    "source": [
     "**Key Configuration Flags:**\n",
@@ -537,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b66a9df7",
+   "id": "11ede89e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1944f91c",
+   "id": "e9d0daec",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -581,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76441bca",
+   "id": "786b85a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfaa1ec0",
+   "id": "207ae0b6",
    "metadata": {},
    "source": [
     "### Step 4: Test Basic Inference"
@@ -620,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cd6cce4",
+   "id": "3382df0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,7 +676,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c45b51f",
+   "id": "f6707c0d",
    "metadata": {},
    "source": [
     "---\n",
@@ -660,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ce01452",
+   "id": "f9c5762a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +746,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af946643",
+   "id": "7615ab8d",
    "metadata": {},
    "source": [
     "**Expected Behavior:**\n",
@@ -732,7 +763,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae462f76",
+   "id": "48985b33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,7 +782,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06f003a9",
+   "id": "73cfc13d",
    "metadata": {},
    "source": [
     "**Option B: Enable Verbose Logging (Optional - Very Verbose)**\n",
@@ -762,7 +793,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "516458d3",
+   "id": "78cabe04",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,7 +809,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f21c46ad",
+   "id": "f24323e1",
    "metadata": {},
    "source": [
     "**What indicates KV-aware routing is working:**\n",
@@ -793,7 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c1eff55",
+   "id": "d537996c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -840,7 +871,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34b14a9b",
+   "id": "92307c42",
    "metadata": {},
    "source": [
     "### Step 4: Verify KV-Aware Routing is Working"
@@ -849,7 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8891ef08",
+   "id": "919d5b24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -887,7 +918,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54b99b0a",
+   "id": "324c2fc1",
    "metadata": {},
    "source": [
     "**How to confirm KV-aware routing is working:**\n",
@@ -926,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "125ef6c1",
+   "id": "9de77ed3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -949,7 +980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1815f22",
+   "id": "9fd2bd21",
    "metadata": {},
    "source": [
     "### Workers Not Discovered"
@@ -958,7 +989,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34b2e66a",
+   "id": "59349489",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -982,7 +1013,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8bf3726",
+   "id": "04abef20",
    "metadata": {},
    "source": [
     "### No Requests Reaching Workers"
@@ -991,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "123ee42b",
+   "id": "36020787",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1015,7 +1046,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85cfc534",
+   "id": "80dd3cbd",
    "metadata": {},
    "source": [
     "### Understanding Cache Sharing with NIXL\n",
@@ -1049,7 +1080,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c2e6c26",
+   "id": "e2630824",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1066,7 +1097,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e2c4cd2",
+   "id": "b54f6028",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Still Running\n",
@@ -1077,7 +1108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf59a9a1",
+   "id": "44755460",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1102,7 +1133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ac86ce1",
+   "id": "09363e91",
    "metadata": {},
    "source": [
     "---\n",
@@ -1119,7 +1150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2787683d",
+   "id": "dabfe460",
    "metadata": {},
    "source": [
     "### Community Resources\n",
